fix for quotes on mobile

--- a/arc-assets/themes/arc-ut-thehill-child/scss/_page-template-wide.scss
+++ b/arc-assets/themes/arc-ut-thehill-child/scss/_page-template-wide.scss
@@ -25,5 +25,13 @@
 			bottom: 20px;
 			text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
 		}
+		@media screen and (max-width: 560px) {
+			background: darken($header-bg, 10%);
+			.banner-title,
+			.banner-subtitle {
+				position: static;
+				padding: 10px;
+			}
+		}
 	}
 }
