--- a/arc-assets/themes/arc-ut-thehill-child/style.css
+++ b/arc-assets/themes/arc-ut-thehill-child/style.css
@@ -1770,6 +1770,13 @@ h1, h2, h3 {
     font-size: 14px;
     bottom: 20px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); }
+  @media screen and (max-width: 560px) {
+    .page-template-template-wide .main-banner {
+      background: #afc4cb; }
+      .page-template-template-wide .main-banner .banner-title,
+      .page-template-template-wide .main-banner .banner-subtitle {
+        position: static;
+        padding: 10px; } }
 
 #mobile #sidebar #masthead {
   min-height: 75px; }
